# spindlecad

./: README.md  Setup.lhs  SpindleCAD.cabal
doc/experiments/: bearings_set.maxima  fea.maxima  nonlinear_rigidity.maxima  nonlinear_rigidity.ods  relative_deflection.maxima
doc/website/: index.html  news.html  support.html
doc/website/css/: basic.css
doc/website/ru/: index.html  news.html  support.html
src/: Bearing.lhs  BearingsList.lhs  CASExpr.lhs  CourseWorkSpindle.lhs  Drawing.lhs  ExactNumber.lhs  Lisp.lhs  MK7702Spindle.lhs  Makefile  Material.lhs  MaterialsList.lhs  Maxima.lhs  PerformanceTest.lhs  PhysicalDimesions.lhs  SpindleEquations.lhs  TestContraintsSolver.lhs  TypeLevelBoolean.lhs  TypeLevelInteger.lhs  TypeLevelPhysicalDimension.lhs  TypeLevelPhysicalDimensions.lhs  TypeLevelPhysicalDimesions.lhs  TypeLevelPhysicalUnitsList.lhs  TypeLevelPhysicalValue.lhs  TypeLevelRatio.lhs
src/Bearings/FAG/: CataloguePreparation.lhs  SpindleBearings.lhs  SpindleBearingsCatalogue.lhs  SpindleBearingsCatalogue.txt
src/TekHaskell/: INSTALL  TekHaskell.cabal  Test.lhs
src/TekHaskell/src/: TekHaskell.lhs
src/TekHaskell/src/TekHaskell/: CASExpr.lhs  ExactNumber.lhs  Lisp.lhs  Maxima.lhs  TypeLevelBoolean.lhs  TypeLevelInteger.lhs  TypeLevelPhysicalDimension.lhs  TypeLevelPhysicalUnitsList.lhs  TypeLevelPhysicalValue.lhs  TypeLevelRatio.lhs
src/TestFEA/: CrossSection.hs  Drawing.hs  Element.hs  ElementMatrix.hs  Elements.hs  INSTALL  Main.hs  Makefile  Material.hs  Node.hs  Setup.lhs  TestFEA.cabal  TestMatrices.hs  Truss.lhs
src/TestFEA/Elements/: Bearing1D.hs  BernoulliEulerBeam2D.hs  TimoshenkoBeam2D.hs  TwoNodeBar2D.hs
src/TestGUI/: IRP.lhs  Makefile  Tutorial.lhs
